--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/MATCHMAKING
+MONGO_URI=mongodb+srv://mustapha01:ouhassiP352615@cluster0.6drfkxf.mongodb.net/MATCHMAKING
 JWT_SECRET=change_this_to_a_strong_secret
 JWT_EXPIRES=7d
 GOOGLE_CLIENT_ID=482588772999-j4urfe2a8deablbsdckd6vaf80lmv9nn.apps.googleusercontent.com
-GOOGLE_IOS_CLIENT_ID=482588772999-nqpdvk0ho7kfvgqsot276l2khdml8unv.apps.googleusercontent.com
+GOOGLE_IOS_CLIENT_ID=576392076825-7cnap922s5u771d1u37b6q47ba0236a1.apps.googleusercontent.com
 EMAIL_USER=astromeetingapp@gmail.com
 EMAIL_PASS=ppacnjydsglwaoiz
 TWILIO_SID=AC26cde513cd13e4f61353ca782fa354bd
