--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
+    "stripe": "^19.2.0",
     "twilio": "^5.9.0"
   },
   "devDependencies": {
